# HabitFlowByMe

./: .dockerignore  .editorconfig  .env.example  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.dev.yml  compose.prod.yml  compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 64c8560c8ee0_create_initial_tables.py  b6df88d0f6ca_add_habit_logs_with_composite_index.py
app/: config.py  dependencies.py  main.py
app/api/: deps.py  exception_handlers.py  router.py
app/core/: config.py  exceptions.py  lifespan.py  logging.py  security.py  types.py
app/db/: base.py  deps.py  models.py  session.py
app/modules/habits/: di.py  models.py  repositories.py  router.py  schemas.py  services.py
app/modules/users/: di.py  models.py  repositories.py  router.py  schemas.py  services.py
app/web/: auth.py  deps.py  habits.py  router.py  templates_config.py
docker/: entrypoint.sh
static/css/: app.css
templates/: base.html
templates/auth/: login.html  register.html
templates/habits/: _habit_card.html  _habit_card_sliding.html  _sliding_calendar.html  form.html  list.html  list_sliding.html  stats.html
tests/: conftest.py  test_habit_logs.py  test_habits.py  test_health.py
