[project]
name = "habitflowbyme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]


# =========================================================================
# НАСТРОЙКА RUFF (Заменяет Black, Isort, Flake8)
# =========================================================================
[tool.ruff]
line-length = 88 # Стандартная длина строки (как в Black)
target-version = "py313" # Укажите вашу версию Python (например, py310, py312)

[tool.ruff.lint]
# Включаем правила: E/W (Pycodestyle), F (Pyflakes), I (Isort)
select = ["E", "F", "I",  "UP", "B", "SIM"]
ignore = [] # Сюда можно вписать коды ошибок, которые нужно игнорировать

# =========================================================================
# НАСТРОЙКА PYTEST (Замена pytest.ini)
# =========================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
