# ==========================================
# 1. Метаданные проекта
# ==========================================
[project]
name = "habitflowbyme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# ==========================================
# 2. Основные зависимости (Runtime)
# ==========================================
dependencies = [
    # Web Framework
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.2",
    # Database & ORM
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.5",
    "psycopg2-binary>=2.9.12",
    # Validation & Settings
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "passlib>=1.7.4",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.32",
    "argon2-cffi>=25.1.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]


# =========================================================================
# НАСТРОЙКА RUFF (Заменяет Black, Isort, Flake8)
# =========================================================================
[tool.ruff]
line-length = 88 # Стандартная длина строки (как в Black)
target-version = "py312" # Укажите вашу версию Python (например, py310, py312)

[tool.ruff.lint]
# Включаем правила: E/W (Pycodestyle), F (Pyflakes), I (Isort)
select = ["E", "F", "I",  "UP", "B", "SIM"]
ignore = [  # Сюда можно вписать коды ошибок, которые нужно игнорировать
    "B008", # FastAPI Depends() uses function calls in parameter defaults
    "E501", # E501 - слишком длинная строка
]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

# =========================================================================
# НАСТРОЙКА PYTEST (Замена pytest.ini)
# =========================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

# =========================================================================
# НАСТРОЙКА MYPY
# =========================================================================
[tool.mypy]
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

# Настройки плагина Pydantic
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "jose.*",
    "passlib.*"
]
ignore_missing_imports = true
